--- a/index.html
+++ b/index.html
@@ -1,1 +1,249 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title> My Portfolio - Faithful </title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Simonetta:900i" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+
+    <!---------- Navigation Section ------------------>
+    <nav class="navbar navbar-expand-sm transparent navbar-dark p-3 fixed-top">
+        <div class="container">
+            <!------- Navigation Bar Logo/Brand ---------->
+            <a href="#" class="navbar-brand">
+                Faithful Okere
+            </a>
+
+            <!------------ Toggler ------------->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-----------------  Links Section ------------------->
+            <div class="collapse navbar-collapse justify-content-end" id="nav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#banner" class="nav-link"> Home </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#about" class="nav-link"> About </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#portfolio" class="nav-link"> Porfolio </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contact" class="nav-link"> Contact </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-----------------Banner Section --------------------->
+    <section id="banner">
+        <div class="container">
+            <div class="row max-viewport align-items-center text-center">
+                <div class="col-md-6 d-none d-md-block">
+                    <img src="assets/img2_1.jpg" alt="bannerpic" class="img-fluid rounded-thumbnail">
+                </div>
+                <div class="col-12 col-sm-6 mx-auto my-5">
+                    <h1 class="text-white "> Hello! I'm Faithful </h1><br>
+                    <h5 class="text-white "> It's time to create something extraordinary! </h5>
+                    <h6 class="mt-3"><a aria-label="contakts" id="whoLink" href="#Contactme"> Find Me On:
+                        </a></h6>
+
+                    <a href="https://github.com/FO-beep" class="btn btn-lg btn-outline-warning text-uppercase m-2
+                    p-2"><i class="fa fa-github mr-2"> Github </i></a>
+                    <a href="https://www.linkedin.com/in/faithful-o-929ab6154/" class="btn btn-lg btn-outline-warning text-uppercase m-2
+                    p-2"><i class="fa fa-linkedin mr-2"> Linkedin </i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!---------------  About Section ------------------>
+    <section id="about" class="py-5 bg-secondary">
+        <div class="container">
+            <div class="row align-items-center text-center">
+                <div class="col-sm-12 col-md-6 col-lg-4 text-white my-3 d-flex">
+                    <div class="inner-text">
+
+                        <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-none d-md-block ">
+                            <img src="assets/profile_pic.jpg" alt="profilepicture" class="img-fluid rounded-thumbnail"
+                                id="profilepic">
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-4 text-white my-4 d-flex">
+                    <div class="inner-text">
+                        <h1 class="my-4"><a aria-label="aboutyou" id="whoLink" href="#about" style="color: white;">
+                                <bold> About Me </bold>
+                            </a>
+                        </h1><br>
+
+                        <p class="lead"> I am a Full-Stack Web Developer who has a passion for web development,
+                            technology innovation, building excellent software that improves the lives of those around
+                            me. With a background in Architectural Engineering, Data Analysis; well experienced and
+                            skilled in the field of Financial Management and Consumer Rentention.
+                            I believe we can create the extraordinary. <br>
+                            <a aria-label="contact" href="#contact"> Let's do this. </a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-6 mx-auto col-lg-4 text-white my-3 d-flex">
+                    <div class="inner-text text-center">
+                        <h3 class="my-3"> Fun Facts </h3>
+                        <p class="lead"> #Coffee-lover <br> #Speaks Russian, <br> #Cycling - is a way of life <br>
+                            #baking - remains
+                            a mystery to me </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <!---------------- Contact Me Section ------------------>
+    <section id="contact" class="p-5">
+        <div class="container">
+            <div class="row text-center align-items-center justify-content-between">
+                <div class="col-sm-6 my-2">
+                    <h1 class="text-white text-uppercase"> Contact Me </h1>
+                </div>
+                <div class="col-sm-6 my-2">
+                    <a href="#" class="btn btn-lg btn-outline-warning text-uppercase"> Send me a note </a>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <!------------- Portfolio Section ------------->
+    <section id="portfolio" class="p-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 my-3">
+                    <img src="assets/img1.jpg" class="img-fluid rounded" alt="project1">
+                    <h1 class="my-3"> Project 1 </h1>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+                        vel saepe
+                        explicabo quidem odit, delectus autem consequatur, earum blanditiis qui velit
+                        laudantium et
+                        facere iste illo esse numquam debitis aut?</p>
+                </div>
+                <div class="col-sm-6 my-3">
+                    <img src="assets/img1.jpg" class="img-fluid rounded" alt="project2">
+                    <h1 class="my-3"> Project 2 </h1>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+                        vel saepe
+                        explicabo quidem odit, delectus autem consequatur, earum blanditiis qui velit
+                        laudantium et
+                        facere iste illo esse numquam debitis aut?</p>
+                </div>
+                <div class="col-sm-6 my-3">
+                    <img src="assets/img1.jpg" class="img-fluid rounded" alt="project3">
+                    <h1 class="my-3"> Project 3 </h1>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+                        vel saepe
+                        explicabo quidem odit, delectus autem consequatur, earum blanditiis qui velit
+                        laudantium et
+                        facere iste illo esse numquam debitis aut?</p>
+                </div>
+                <div class="col-sm-6 my-3">
+                    <img src="assets/img1.jpg" class="img-fluid rounded" alt="project4">
+                    <h1 class="my-3"> Project 4 </h1>
+                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+                        vel saepe
+                        explicabo quidem odit, delectus autem consequatur, earum blanditiis qui velit
+                        laudantium et
+                        facere iste illo esse numquam debitis aut?</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <!----------   Social Section -------------->
+    <section id="social" class="p-5">
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col-12 d-flex justify-content-between"><br><br>
+                    <!--- <a href="#"><i class="fa fa-facebook fa-5x text-warning m-3"></i></a>   -->
+                    <a href="mailto:fullstacked.faith@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3"></i>
+                        fullstacked.faith@gmail.com </a><br>
+                    <!--- <a href="#"><i class="fa fa-twitter fa-5x text-warning m-3"></i></a>  -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-------------------- Footer Section ------------->
+    <section id="footer" class="p-5 bg-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <h6 class="text-white text-capitalize" id="copyright"> &copy; Copyright 2020 faithful </h6>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!---------- Optional Javascript ------->
+    <!----------jquery, then Popper.js, then bootstrsp js ------>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/c434180c99.js" crossorigin="anonymous"></script>
+    <!-------- My jquery file ------>
+    <script src="script.js"></script>
+
+</body>
+
+</html>
