updates to contactform, html

--- a/index.html
+++ b/index.html
@@ -145,15 +145,12 @@
                     <img src="assets/workday-scheduler.gif" class="img-fluid rounded" alt="project1">
                     <h1 class="my-3"> Work Day Scheduler </h1>
 
-                    <ButtonGroup as="span" className="py-2" role="group" aria-label="Button links for app info">
-                        <Button className="project-link" href={project.app} title={project.creation} target="_blank"
-                            rel="noreferrer" id="portfoliobtn"><a
-                                href="https://fo-beep.github.io/Faithfuls-Work-Day-Scheduler/"
-                                title="GitHub Repo: Faithfuls-Work-Day-Scheduler" target="_blank" rel="noreferrer"
-                                class="project-link btn btn-primary"> View </a></Button>
+                    <ButtonGroup as="span" className="py-2" id="portfoliobtn"><a
+                            href="https://fo-beep.github.io/Faithfuls-Work-Day-Scheduler/"
+                            title="GitHub Repo: Faithfuls-Work-Day-Scheduler" target="_blank" rel="noreferrer"
+                            class="project-link btn btn-primary"> View </a></Button>
 
-                        <Button className="project-link" href={project.code} title={`GitHub Repo: ${project.creation}`}
-                            target="_blank" rel="noreferrer"><a
+                        <Button className="project-link"><a
                                 href="https://github.com/FO-beep/Faithfuls-Work-Day-Scheduler"
                                 title="GitHub Repo: Faithfuls-Work-Day-Scheduler" target="_blank" rel="noreferrer"
                                 class="project-link btn btn-primary"> Code </a>
@@ -167,14 +164,11 @@
                     <img src="assets/code-quiz.gif" class="img-fluid rounded" alt="project2">
                     <h1 class="my-3"> Code Quiz </h1>
 
-                    <ButtonGroup as="span" className="py-2" role="group" aria-label="Button links for app info">
-                        <Button className="project-link" href={project.app} title={project.creation} target="_blank"
-                            rel="noreferrer" id="portfoliobtn"><a href="https://fo-beep.github.io/Code-Quized/"
-                                title="GitHub Repo: Code-Quized" target="_blank" rel="noreferrer"
-                                class="project-link btn btn-primary"> View </a></Button>
+                    <ButtonGroup as="span" className="py-2" id="portfoliobtn"><a
+                            href="https://fo-beep.github.io/Code-Quized/" title="GitHub Repo: Code-Quized"
+                            target="_blank" rel="noreferrer" class="project-link btn btn-primary"> View </a></Button>
 
-                        <Button className="project-link" href={project.code} title={`GitHub Repo: ${project.creation}`}
-                            target="_blank" rel="noreferrer"><a href="https://github.com/FO-beep/Code-Quized"
+                        <Button className="project-link"><a href="https://github.com/FO-beep/Code-Quized"
                                 title="GitHub Repo: Code-Quized" target="_blank" rel="noreferrer"
                                 class="project-link btn btn-primary"> Code </a>
                         </Button>
@@ -187,14 +181,11 @@
                     <img src="assets/parkpic.jpg" class="img-fluid rounded" alt="project3">
                     <h1 class="my-3"> Park Planner </h1>
 
-                    <ButtonGroup as="span" className="py-2" role="group" aria-label="Button links for app info">
-                        <Button className="project-link" href={project.app} title={project.creation} target="_blank"
-                            rel="noreferrer" id="portfoliobtn"><a href="https://andreagt91.github.io/Park-Planner/"
-                                title="GitHub Repo: Park-Planner" target="_blank" rel="noreferrer"
-                                class="project-link btn btn-primary"> View </a></Button>
+                    <ButtonGroup as="span" className="py-2" id="portfoliobtn"><a
+                            href="https://andreagt91.github.io/Park-Planner/" title="GitHub Repo: Park-Planner"
+                            target="_blank" rel="noreferrer" class="project-link btn btn-primary"> View </a></Button>
 
-                        <Button className="project-link" href={project.code} title={`GitHub Repo: ${project.creation}`}
-                            target="_blank" rel="noreferrer"><a href="https://github.com/Andr/Park-Planner"
+                        <Button className="project-link"><a href="https://github.com/Andr/Park-Planner"
                                 title="GitHub Repo: Park-Planner" target="_blank" rel="noreferrer"
                                 class="project-link btn btn-primary"> Code </a>
                         </Button>
@@ -208,14 +199,12 @@
                 <div class="col-sm-6 my-3">
                     <img src="assets/passwordgen.png" class="img-fluid rounded" alt="project4">
                     <h1 class="my-3"> Password Generator </h1>
-                    <ButtonGroup as="span" className="py-2" role="group" aria-label="Button links for app info">
-                        <Button className="project-link" href={project.app} title={project.creation} target="_blank"
-                            rel="noreferrer" id="portfoliobtn"><a href="https://fo-beep.github.io/Password-Generator-1/"
-                                title="GitHub Repo: Password-Generator-1" target="_blank" rel="noreferrer"
-                                class="project-link btn btn-primary"> View </a></Button>
+                    <ButtonGroup as="span" className="py-2" id="portfoliobtn"><a
+                            href="https://fo-beep.github.io/Password-Generator-1/"
+                            title="GitHub Repo: Password-Generator-1" target="_blank" rel="noreferrer"
+                            class="project-link btn btn-primary"> View </a></Button>
 
-                        <Button className="project-link" href={project.code} title={`GitHub Repo: ${project.creation}`}
-                            target="_blank" rel="noreferrer"> <a href="https://github.com/FO-beep/Password-Generator-1"
+                        <Button className="project-link"> <a href="https://github.com/FO-beep/Password-Generator-1"
                                 title="GitHub Repo: Password-Generator-1" target="_blank" rel="noreferrer"
                                 class="project-link btn btn-primary"> Code </a>
                         </Button>
