--- a/contactform.html
+++ b/contactform.html
@@ -55,16 +55,16 @@
             <div class="row">
                 <div class="col-6">
                     <form class="contact-form">
-                        <div class="form-group">
+                        <div class="form-group form-input">
                             <label for="inputinfo">Name</label>
                             <input type="text" class="form-control" placeholder="John Smith">
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group form-input">
                             <label for="inputinfo">Email</label>
                             <input type="email" class="form-control" placeholder="example@gmail.com">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group form-input">
                             <label for="inputinfo">Message</label>
                             <textarea class="form-control" rows="4" placeholder="Message">
               </textarea>
