--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="#contact" class="nav-link"> Contact </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#resume" class="nav-link"> Resume </a>
+                        <a href="assets/resume1.jpg" class="nav-link"> Resume </a>
                     </li>
                 </ul>
             </div>
@@ -98,9 +98,10 @@
 
                         <p class="lead"> I am a Full-Stack Web Developer who has a passion for web development,
                             technology innovation, building excellent software that improves the lives of those around
-                            me. With a background in Architectural Engineering, Data Analysis; well experienced and
+                            me. I have a background in Architectural Engineering, Data Analysis. I am well experienced
+                            and
                             skilled in the field of Financial Management and Consumer Rentention.
-                            I believe we can create the extraordinary. <br>
+                            I believe we can create the extraordinary together!. <br>
                             <a aria-label="contact" href="#contact"> Let's do this. </a>
                         </p>
                     </div>
@@ -226,8 +227,9 @@
                     <!--- <a href="#"><i class="fa fa-facebook fa-5x text-warning m-3"></i></a>   -->
                     <a href="mailto:fullstacked.faith@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3"></i>
                         fullstacked.faith@gmail.com </a><br>
-                    <a href="#"><i class="fa fa-file fa-5x text-warning m-3"></i>
-                        Resume </a><br>
+                    <a href="assets/resume1.jpg" href="assets/resume2.jpg"><i
+                            class="fa fa-file fa-5x text-warning m-3"></i>
+                        Resume </a></a><br>
                     <!--- <a href="#"><i class="fa fa-twitter fa-5x text-warning m-3"></i></a>  -->
                 </div>
             </div>
