--- a/contactform.html
+++ b/contactform.html
@@ -43,6 +43,10 @@
                     <li class="nav-item">
                         <a href="#contact" class="nav-link"> Contact </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="assets/resume1.jpg" class="nav-link"> Resume </a>
+                    </li>
+
                 </ul>
             </div>
         </div>
