updated code to reflect current year

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                    <h6 class="text-white text-capitalize"> &copy; Copyright 2020 faithful </h6>
+                    <p  class="text-white text-capitalize" > &copy; Copyright <span  id= "currentYear"> 2020</span> faithful </p>
                 </div>
             </div>
         </div>
@@ -278,6 +278,7 @@
     </script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/c434180c99.js" crossorigin="anonymous"></script>
+
     <!-------- My jquery file ------>
     <script src="script.js"></script>
 
