updated contact info

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
             <div class="row align-items-center">
                 <div class="col-12 d-flex justify-content-between"><br>
                     <!--- <a href="#"><i class="fa fa-facebook fa-5x text-warning m-3"></i></a>   -->
-                    <a href="mailto:fullstacked.faith@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3"></i>
-                        fullstacked.faith@gmail.com </a><br>
+                    <a href="mailto:faithfulokere24@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3"></i>
+                        Email me </a><br>
                     <a href="assets/resume1.jpg" href="assets/resume2.jpg"><i
                             class="fa fa-file fa-5x text-warning m-3"></i>
                         Resume </a></a><br>
