--- a/contactform.html
+++ b/contactform.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                    <h6 class="text-white text-capitalize"> &copy; Copyright 2020 faithful </h6>
+                    <p  class="text-white text-capitalize" > &copy; Copyright <span  id= "currentYear"> 2020</span> faithful </p>
                 </div>
             </div>
         </div>
