--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> My Portfolio - Faithful </title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Simonetta:900i" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
+    
+
+
 
 </head>
 
@@ -54,15 +57,15 @@
 
     <!-----------------Banner Section --------------------->
     <section id="banner">
-        <div class="container">
+        <div class="container ">
             <div class="row max-viewport align-items-center text-center">
-                <div class="col-md-6 d-none d-md-block">
+                <div class="col-md-6">
                     <img src="assets/img2_1.jpg" alt="img1" class="img-fluid rounded-thumbnail">
                 </div>
                 <div class="col-12 col-sm-6 mx-auto my-5">
                     <h1 class="text-white "> Hello! I'm Faithful </h1><br>
                     <h5 class="text-white "> It's time to create something extraordinary! </h5>
-                    <h6 class="mt-3"><a aria-label="contakts" id="whoLink" href="#Contactme"> Find Me On:
+                    <h6 class="mt-3"><a aria-label="contakts" id="whoLink1" href="#Contactme"> Find Me On:
                         </a></h6>
 
                     <a href="https://github.com/FO-beep" class="btn btn-lg btn-outline-warning text-uppercase m-2
@@ -75,50 +78,28 @@
     </section>
 
     <!---------------  About Section ------------------>
-    <section id="about" class="py-5 bg-secondary">
-        <div class="container">
-            <div class="row align-items-center text-center">
-                <div class="col-sm-12 col-md-6 col-lg-4 text-white my-3 d-flex">
-                    <div class="inner-text">
-
-                        <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-none d-md-block ">
-                            <img src="assets/profile_pic.jpg" alt="profilepicture" class="img-fluid rounded-thumbnail"
-                                id="profilepic">
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-12 col-md-6 col-lg-4 text-white my-4 d-flex">
-                    <div class="inner-text">
-                        <h1 class="my-4"><a aria-label="aboutyou" id="whoLink" href="#about" style="color: white;">
-                                <bold> About Me </bold>
-                            </a>
-                        </h1><br>
-
-                        <p class="lead"> I am a Full-Stack Web Developer who has a passion for web development,
-                            technology innovation, building excellent software that improves the lives of those around
-                            me. I have a background in Architectural Engineering, Data Analysis. I am well experienced
-                            and
-                            skilled in the field of Financial Management and Consumer Rentention.
-                            I believe we can create the extraordinary together!. <br>
-                            <a aria-label="contact" href="#contact"> Let's do this. </a>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-sm-12 col-md-6 mx-auto col-lg-4 text-white my-3 d-flex">
-                    <div class="inner-text text-center">
-                        <h3 class="my-3"> Fun Facts </h3>
-                        <p class="lead"> #Coffee-lover <br> #Speaks Russian, <br> #Cycling - is a way of life <br>
-                            #baking - remains
-                            a mystery to me </p>
-                    </div>
-                </div>
-
+<section id="about">
+    <div class="card mb-3" style="background-color: darkgrey;">
+        <div class="row g-0">
+          <div class="col-md-4 text-center" style="padding: 3rem;">
+            <img src="assets/prof_port_photgrid3.jpg" class="img-fluid rounded-start" alt="profilepic">
+          </div>
+          <div class="col-md-8" style="padding: 1rem; align-items: center; font-size: 20px;">
+            <div class="card-body text-center">
+              <h1 class="card-title">About Me</h1>
+              <p class="card-text">I am a Full-Stack Web Developer who has a passion for web development,
+                technology innovation, building excellent software that improves the lives of those around
+                me. I have a background in Architectural Engineering, Data Analysis. I am also well experienced
+                and skilled in the field of Financial Management and Consumer Retention.
+                I believe we can create the extraordinary together!.</p>
+              <p class="card-text"> Fun Facts: #Coffee-lover <br> #Speaks Russian <br> #Cycling - is a way of life <br>
+                #baking - remains a mystery to me</p>
             </div>
+          </div>
         </div>
-    </section>
+      </div>
+
+</section>
 
 
     <!---------------- Contact Me Section ------------------>
@@ -138,7 +119,7 @@
 
 
     <!------------- Portfolio Section ------------->
-    <!--------------MAKING SURE PORTFOLIO LINKs WRK---HERE-->
+    
     <section id="portfolio" class="p-5 bg-light">
         <div class="container">
             <div class="row">
