updated css of various sections

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 
     <link rel="stylesheet" href="style.css">
     
-
-
-
 </head>
 
 <body>
@@ -79,7 +76,7 @@
 
     <!---------------  About Section ------------------>
 <section id="about">
-    <div class="card mb-3" style="background-color: darkgrey;">
+    <div class="cardabout mb-3" style="background-color:lightslategrey;">
         <div class="row g-0">
           <div class="col-md-4 text-center" style="padding: 3rem;">
             <img src="assets/prof_port_photgrid3.jpg" class="img-fluid rounded-start" alt="profilepic">
@@ -201,21 +198,39 @@
 
 
     <!----------   Social Section -------------->
-    <section id="social" class="p-5">
+    <section id="social">
+      <div class="card-group" >
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title" >Email me</h4>
+            <a href="mailto:faithfulokere24@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3" ></i></a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Resume</h4>
+            <a href="assets/resume1.jpg" href="assets/resume2.jpg"><i
+                class="fa fa-file fa-5x text-warning m-3"></i></a>
+          </div>
+        </div>
+       
+      </div>
+    </section>
+    <!-- <section id="social" class="p-5">
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-12 d-flex justify-content-between"><br>
                     <!--- <a href="#"><i class="fa fa-facebook fa-5x text-warning m-3"></i></a>   -->
-                    <a href="mailto:faithfulokere24@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3"></i>
+                    <!-- <a href="mailto:faithfulokere24@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3"></i>
                         Email me </a><br>
                     <a href="assets/resume1.jpg" href="assets/resume2.jpg"><i
                             class="fa fa-file fa-5x text-warning m-3"></i>
-                        Resume </a></a><br>
+                        Resume </a><br> -->
                     <!--- <a href="#"><i class="fa fa-twitter fa-5x text-warning m-3"></i></a>  -->
-                </div>
+                <!-- </div>
             </div>
         </div>
-    </section>
+    </section>  -->
 
     <!-------------------- Footer Section ------------->
     <section id="footer" class="p-5 bg-dark">
