--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
       <div class="card-group" >
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title" >Email me</h4>
+            <h4 class="card-title" style="color: white;"> Email me </h4>
             <a href="mailto:faithfulokere24@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3" ></i></a>
           </div>
         </div>
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title">Resume</h4>
+            <h4 class="card-title"  style="color: white;">Resume</h4>
             <a href="assets/resume1.jpg" href="assets/resume2.jpg"><i
                 class="fa fa-file fa-5x text-warning m-3"></i></a>
           </div>
