--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <!---------- Navigation Section ------------------>
-    <nav class="navbar navbar-expand-sm transparent navbar-dark p-3 fixed-top">
+    <nav class="navbar navbar-expand-sm transparent navbar-dark p-3 fixed-top" style="background-color: rgba(175, 76, 6, 0.7);">
         <div class="container">
             <!------- Navigation Bar Logo/Brand ---------->
             <a href="#" class="navbar-brand">
@@ -82,7 +82,7 @@
             <img src="assets/prof_port_photgrid3.jpg" class="img-fluid rounded-start" alt="profilepic">
           </div>
           <div class="col-md-8" style="padding: 1rem; align-items: center; font-size: 20px;">
-            <div class="card-body text-center">
+            <div class="card-body text-center" style="color:white;">
               <h1 class="card-title">About Me</h1>
               <p class="card-text">I am a Full-Stack Web Developer who has a passion for web development,
                 technology innovation, building excellent software that improves the lives of those around
