updated asset section

--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title"  style="color: white;">Resume</h4>
-            <a href="assets/resume1.jpg" href="assets/DevResume_F.O.pdf"><i
-                class="fa fa-file fa-5x text-warning m-3"></i></a>
+            <a href="assets/DevResume_F.O.pdf" rel="noopener noreferrer" target="_blank"><i class="fa fa-file fa-5x text-warning m-3"></i></a>
           </div>
         </div>
        
