updated html file

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="#contact" class="nav-link"> Contact </a>
                     </li>
                     <li class="nav-item">
-                        <a href="assets/resume1.jpg" class="nav-link"> Resume </a>
+                        <a href="assets/DevResume_F.O.pdf" class="nav-link"> Resume </a>
                     </li>
                 </ul>
             </div>
@@ -203,7 +203,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title" style="color: white;"> Email me </h4>
-            <a href="mailto:faithfulokere24@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3" ></i></a>
+            <a href="mailto:faithfulok7@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3" ></i></a>
           </div>
         </div>
         <div class="card">
@@ -215,21 +215,6 @@
        
       </div>
     </section>
-    <!-- <section id="social" class="p-5">
-        <div class="container-fluid">
-            <div class="row align-items-center">
-                <div class="col-12 d-flex justify-content-between"><br>
-                    <!--- <a href="#"><i class="fa fa-facebook fa-5x text-warning m-3"></i></a>   -->
-                    <!-- <a href="mailto:faithfulokere24@gmail.com"><i class="fa fa-envelope fa-5x text-warning m-3"></i>
-                        Email me </a><br>
-                    <a href="assets/resume1.jpg" href="assets/resume2.jpg"><i
-                            class="fa fa-file fa-5x text-warning m-3"></i>
-                        Resume </a><br> -->
-                    <!--- <a href="#"><i class="fa fa-twitter fa-5x text-warning m-3"></i></a>  -->
-                <!-- </div>
-            </div>
-        </div>
-    </section>  -->
 
     <!-------------------- Footer Section ------------->
     <section id="footer" class="p-5 bg-dark">
