--- a/contactform.html
+++ b/contactform.html
@@ -44,7 +44,7 @@
                         <a href="#contact" class="nav-link"> Contact </a>
                     </li>
                     <li class="nav-item">
-                        <a href="assets/resume1.jpg" class="nav-link"> Resume </a>
+                        <a href="assets/DevResume_F.O.pdf" class="nav-link"> Resume </a>
                     </li>
 
                 </ul>
