--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 me. I have a background in Architectural Engineering, Data Analysis. I am also well experienced
                 and skilled in the field of Financial Management and Consumer Retention.
                 I believe we can create the extraordinary together!.</p>
-              <p class="card-text"> Fun Facts: #Coffee-lover <br> #Speaks Russian <br> #Cycling - is a way of life <br>
+              <p class="card-text"> Fun Facts: #Tea connoisseure <br> #Speaks Russian <br> #Cycling - is a way of life <br>
                 #baking - remains a mystery to me</p>
             </div>
           </div>
