--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                     <a href="https://github.com/FO-beep" class="btn btn-lg btn-outline-warning text-uppercase m-2
                     p-2"><i class="fa fa-github mr-2"> Github </i></a>
-                    <a href= "https://www.linkedin.com/in/faithful-okere" class="btn btn-lg btn-outline-warning text-uppercase m-2
+                    <a href= "https://www.linkedin./faithful-okere" class="btn btn-lg btn-outline-warning text-uppercase m-2
                     p-2"><i class="fa fa-linkedin mr-2"> Linkedin </i></a>
                 </div>
             </div>
@@ -209,7 +209,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title"  style="color: white;">Resume</h4>
-            <a href="assets/DevResume__F.O.pdf" rel="noopener noreferrer" target="_blank"><i class="fa fa-file fa-5x text-warning m-3"></i></a>
+            <a href="assets/MyResume__F.O.pdf" rel="noopener noreferrer" target="_blank"><i class="fa fa-file fa-5x text-warning m-3"></i></a>
           </div>
         </div>
        
