--- a/contactform.html
+++ b/contactform.html
@@ -44,8 +44,9 @@
                         <a href="#contact" class="nav-link"> Contact </a>
                     </li>
                     <li class="nav-item">
-                        <a href="assets/MyResume__F.O.pdf" class="nav-link"> Resume </a>
+                        <a href="assets/MyResume__F.O.pdf" rel="noopener noreferrer" target="_blank" class="nav-link" > Resume </a>
                     </li>
+                   
 
                 </ul>
             </div>
